--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
     <a href="#contact">Contact</a>
   </nav>
 
+  <!-- LOGO ADDED HERE -->
+  <div style="text-align:center; margin-top:20px;">
+    <img src="icons/icon-192.png" alt="Logo" style="width:120px; border-radius:12px;">
+  </div>
+
   <section class="hero" id="home">
     <h1>De Radiance Retreat</h1>
     <p>Luxury Beauty & Wellness Treatments in Lower Darwen — Facials, Hijama, Massage, Nails, Waxing & More.</p>
