--- a/index.html
+++ b/index.html
@@ -155,10 +155,7 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- LOGO ADDED HERE -->
-  <div style="text-align:center; margin-top:20px;">
-    <img src="icons/icon-192.png" alt="Logo" style="width:120px; border-radius:12px;">
-  </div>
+  <!-- LOGO REMOVED CLEANLY -->
 
   <section class="hero" id="home">
     <h1>De Radiance Retreat</h1>
