--- a/index.html
+++ b/index.html
@@ -179,9 +179,23 @@
 
   <section id="gallery" class="gallery">
     <h2>Gallery</h2>
-    <img src="image1.jpg" alt="">
-    <img src="image2.jpg" alt="">
-    <img src="image3.jpg" alt="">
+    <img src="https://i.ibb.co/Xx4NxBjQ/14.png" alt="">
+        <img src="https://i.ibb.co/G4brcrsH/13.png" alt="">
+        <img src="https://i.ibb.co/zWgYSjSc/15.png" alt="">
+        <img src="https://i.ibb.co/Pv2ffS83/17.png" alt="">
+        <img src="https://i.ibb.co/XZ9GFyP5/20.png" alt="">
+        <img src="https://i.ibb.co/KpQXXKwF/21.png" alt="">
+        <img src="https://i.ibb.co/1tbW27FB/3.png" alt="">
+        <img src="https://i.ibb.co/B59mtdT4/4.png" alt="">
+        <img src="https://i.ibb.co/ynwQ6QjL/5.png" alt="">
+        <img src="https://i.ibb.co/G4RNw4JQ/6.png" alt="">
+        <img src="https://i.ibb.co/8DRhBLRZ/7.png" alt="">
+        <img src="https://i.ibb.co/ZzYJ0d0Z/8.png" alt="">
+        <img src="https://i.ibb.co/LdMzCCqT/9.png" alt="">
+        <img src="https://i.ibb.co/NgrYHJ6q/10.png" alt="">
+        <img src="https://i.ibb.co/Q3YbWGzJ/11.png" alt="">
+        <img src="https://i.ibb.co/5WqDKWYW/12.png" alt="">
+
   </section>
 
   <section id="contact">
@@ -204,3 +218,4 @@
 
 </body>
 </html>
+
