--- a/index.html
+++ b/index.html
@@ -21,58 +21,66 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: #000;
-      color: #fff;
+      background: #ffffff;
+      color: #333;
     }
 
     /* Navigation */
     nav {
-      background: #111;
+      background: #ffffff;
       padding: 15px 20px;
       text-align: center;
-      border-bottom: 1px solid #333;
+      border-bottom: 1px solid #f3d6d6;
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
     nav a {
-      color: #d4af37;
+      color: #d48a8a;
       margin: 0 15px;
       text-decoration: none;
       font-weight: 500;
       letter-spacing: 0.5px;
+      padding-bottom: 5px;
+      transition: 0.3s;
     }
     nav a:hover {
-      color: #fff;
+      color: #b56f6f;
+      border-bottom: 2px solid #d48a8a;
     }
 
     /* Hero Section */
     .hero {
       text-align: center;
       padding: 80px 20px;
-      background: linear-gradient(to bottom, #000, #111);
+      background: linear-gradient(to bottom, #fff5f5, #ffecec);
     }
     .hero h1 {
       font-family: 'Playfair Display', serif;
-      font-size: 42px;
-      color: #d4af37;
+      font-size: 46px;
+      color: #d48a8a;
       margin-bottom: 10px;
     }
     .hero p {
       font-size: 18px;
       max-width: 600px;
       margin: 0 auto 20px;
-      color: #ccc;
+      color: #555;
     }
     .hero button {
-      background: #d4af37;
-      color: #000;
+      background: linear-gradient(135deg, #e7b7b7, #d48a8a);
+      color: #fff;
       padding: 12px 25px;
       border: none;
       font-size: 16px;
       cursor: pointer;
-      border-radius: 4px;
+      border-radius: 6px;
       font-weight: 600;
+      box-shadow: 0 4px 10px rgba(212, 138, 138, 0.3);
+      transition: 0.3s;
     }
     .hero button:hover {
-      background: #b8922a;
+      background: linear-gradient(135deg, #d48a8a, #c97a7a);
     }
 
     /* Sections */
@@ -83,8 +91,8 @@
     }
     h2 {
       font-family: 'Playfair Display', serif;
-      color: #d4af37;
-      font-size: 32px;
+      color: #d48a8a;
+      font-size: 34px;
       margin-bottom: 20px;
       text-align: center;
     }
@@ -95,15 +103,24 @@
       padding: 0;
       line-height: 1.8;
       font-size: 18px;
-      color: #ddd;
+      color: #444;
     }
 
     /* Gallery */
+    .gallery {
+      text-align: center;
+    }
     .gallery img {
       width: 30%;
       margin: 1%;
-      border-radius: 6px;
-      border: 2px solid #333;
+      border-radius: 10px;
+      border: 2px solid #f3d6d6;
+      box-shadow: 0 4px 10px rgba(212, 138, 138, 0.2);
+      transition: 0.3s;
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 14px rgba(212, 138, 138, 0.35);
     }
 
     /* Contact Form */
@@ -111,22 +128,25 @@
       width: 100%;
       padding: 12px;
       margin: 8px 0;
-      background: #111;
-      border: 1px solid #333;
-      color: #fff;
-      border-radius: 4px;
+      background: #fff;
+      border: 1px solid #f3d6d6;
+      color: #333;
+      border-radius: 6px;
+      box-shadow: 0 2px 6px rgba(212, 138, 138, 0.1);
     }
     form button {
-      background: #d4af37;
-      color: #000;
+      background: linear-gradient(135deg, #e7b7b7, #d48a8a);
+      color: #fff;
       padding: 12px 25px;
       border: none;
       cursor: pointer;
       font-weight: 600;
-      border-radius: 4px;
+      border-radius: 6px;
+      box-shadow: 0 4px 10px rgba(212, 138, 138, 0.3);
+      transition: 0.3s;
     }
     form button:hover {
-      background: #b8922a;
+      background: linear-gradient(135deg, #d48a8a, #c97a7a);
     }
 
     /* Footer */
@@ -135,11 +155,11 @@
       padding: 20px;
       color: #777;
       font-size: 14px;
-      border-top: 1px solid #222;
+      border-top: 1px solid #f3d6d6;
       margin-top: 40px;
     }
     footer a {
-      color: #d4af37;
+      color: #d48a8a;
       text-decoration: none;
       margin: 0 5px;
     }
@@ -154,8 +174,6 @@
     <a href="#gallery">Gallery</a>
     <a href="#contact">Contact</a>
   </nav>
-
-  <!-- LOGO REMOVED CLEANLY -->
 
   <section class="hero" id="home">
     <h1>De Radiance Retreat</h1>
@@ -179,22 +197,23 @@
 
   <section id="gallery" class="gallery">
     <h2>Gallery</h2>
+
     <img src="https://i.ibb.co/Xx4NxBjQ/14.png" alt="">
-        <img src="https://i.ibb.co/G4brcrsH/13.png" alt="">
-        <img src="https://i.ibb.co/zWgYSjSc/15.png" alt="">
-        <img src="https://i.ibb.co/Pv2ffS83/17.png" alt="">
-        <img src="https://i.ibb.co/XZ9GFyP5/20.png" alt="">
-        <img src="https://i.ibb.co/KpQXXKwF/21.png" alt="">
-        <img src="https://i.ibb.co/1tbW27FB/3.png" alt="">
-        <img src="https://i.ibb.co/B59mtdT4/4.png" alt="">
-        <img src="https://i.ibb.co/ynwQ6QjL/5.png" alt="">
-        <img src="https://i.ibb.co/G4RNw4JQ/6.png" alt="">
-        <img src="https://i.ibb.co/8DRhBLRZ/7.png" alt="">
-        <img src="https://i.ibb.co/ZzYJ0d0Z/8.png" alt="">
-        <img src="https://i.ibb.co/LdMzCCqT/9.png" alt="">
-        <img src="https://i.ibb.co/NgrYHJ6q/10.png" alt="">
-        <img src="https://i.ibb.co/Q3YbWGzJ/11.png" alt="">
-        <img src="https://i.ibb.co/5WqDKWYW/12.png" alt="">
+    <img src="https://i.ibb.co/G4brcrsH/13.png" alt="">
+    <img src="https://i.ibb.co/zWgYSjSc/15.png" alt="">
+    <img src="https://i.ibb.co/Pv2ffS83/17.png" alt="">
+    <img src="https://i.ibb.co/XZ9GFyP5/20.png" alt="">
+    <img src="https://i.ibb.co/KpQXXKwF/21.png" alt="">
+    <img src="https://i.ibb.co/1tbW27FB/3.png" alt="">
+    <img src="https://i.ibb.co/B59mtdT4/4.png" alt="">
+    <img src="https://i.ibb.co/ynwQ6QjL/5.png" alt="">
+    <img src="https://i.ibb.co/G4RNw4JQ/6.png" alt="">
+    <img src="https://i.ibb.co/8DRhBLRZ/7.png" alt="">
+    <img src="https://i.ibb.co/ZzYJ0d0Z/8.png" alt="">
+    <img src="https://i.ibb.co/LdMzCCqT/9.png" alt="">
+    <img src="https://i.ibb.co/NgrYHJ6q/10.png" alt="">
+    <img src="https://i.ibb.co/Q3YbWGzJ/11.png" alt="">
+    <img src="https://i.ibb.co/5WqDKWYW/12.png" alt="">
 
   </section>
 
@@ -218,4 +237,3 @@
 
 </body>
 </html>
-
