--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+  <!-- Font Awesome for Social Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <!-- PWA -->
   <link rel="manifest" href="manifest.json">
   <script>
@@ -186,17 +189,17 @@
       margin: 0 5px;
     }
 
-    /* Floating Buttons */
-    .floating-buttons {
+    /* Floating Social Buttons */
+    .social-float {
       position: fixed;
       bottom: 20px;
       right: 20px;
       display: flex;
       flex-direction: column;
       gap: 12px;
-      z-index: 200;
+      z-index: 300;
     }
-    .float-btn {
+    .social-icon {
       width: 55px;
       height: 55px;
       border-radius: 50%;
@@ -205,13 +208,13 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-weight: 700;
+      font-size: 24px;
       text-decoration: none;
       box-shadow: 0 4px 12px rgba(212, 138, 138, 0.4);
       transition: 0.3s;
     }
-    .float-btn:hover {
-      transform: scale(1.1);
+    .social-icon:hover {
+      transform: scale(1.12);
       box-shadow: 0 6px 18px rgba(212, 138, 138, 0.6);
     }
   </style>
@@ -285,11 +288,19 @@
     <a href="#">WhatsApp</a>
   </footer>
 
-  <!-- Floating Social Buttons -->
-  <div class="floating-buttons">
-    <a href="https://wa.me/447000000000" class="float-btn whatsapp">WA</a>
-    <a href="https://www.tiktok.com/@yourusername" class="float-btn tiktok">TT</a>
-    <a href="https://instagram.com/yourusername" class="float-btn instagram">IG</a>
+  <!-- Floating Social -->
+  <div class="social-float">
+    <a href="https://www.instagram.com/deradianceretreatltd/" target="_blank" class="social-icon instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
+
+    <a href="https://www.tiktok.com/@deradianceretreatltd" target="_blank" class="social-icon tiktok">
+      <i class="fab fa-tiktok"></i>
+    </a>
+
+    <a href="https://wa.me/447902700222" target="_blank" class="social-icon whatsapp">
+      <i class="fab fa-whatsapp"></i>
+    </a>
   </div>
 
 </body>
